--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,34 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-auth.js"></script>
+  
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    //import { initializeApp } from "https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js";
+    //import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.9.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: 'AIzaSyDF_EicGst1fW9MlNWNGj2oyQmslpaQr_o',
+    appId: '1:273028113150:web:a0c1b542e1a4e573137baf',
+    messagingSenderId: '273028113150',
+    projectId: 'easyattend-bc902',
+    authDomain: 'easyattend-bc902.firebaseapp.com',
+    storageBucket: 'easyattend-bc902.appspot.com',
+    measurementId: 'G-R56MGCMC0R',
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
+  
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
